Added tests for repository package